--- a/base.css
+++ b/base.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
+main {
+  margin: 0%;
+  padding-top: 2rem;
+  background-color: burlywood;
+}
+
 li a:link {
   color: black;
   text-decoration: none;
@@ -16,4 +22,43 @@ li a:hover {
   border-bottom: 1px solid currentColor;
   display: inline-block;
   line-height: 0.85;
+}
+
+h1 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 2rem;
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
+}
+
+h2 a {
+  text-decoration: none;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  color: gray;
+}
+
+img {
+  max-width: 100%;
+}
+
+/* CATEGORIES ARTICLE */
+article {
+  border: 1px solid black;
+  margin-top: 1rem;
+}
+
+.catTitle {
+  padding-left: 1.5rem;
+}
+
+.specItem {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
