--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 .primaryLink li {
@@ -21,5 +25,34 @@
   text-align: center;
 }
 
+.saleItem {
+  display: flex;
+  flex-direction: column;
+}
+
+.saleItem > img {
+  order: -1;
+  align-self: flex-start;
+}
+
+.detailItem {
+  display: flex;
+  justify-content: space-between;
+}
+
 @media screen and (min-width: 700px) {
+  .category {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+
+  .catTitle {
+    grid-column: 1 / 2;
+  }
+
+  .carousel {
+    grid-column: 3 / 8;
+    display: flex;
+    flex-direction: row;
+  }
 }
