--- a/base.css
+++ b/base.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap");
 
 main {
   margin: 0%;
@@ -9,9 +9,10 @@ main {
 li a:link {
   color: black;
   text-decoration: none;
-  font-family: "DM Sans", sans-serif;
-  font-weight: 400;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 300;
   font-size: 0.9rem;
+  letter-spacing: 0.1rem;
 }
 
 li a:visited {
@@ -25,8 +26,8 @@ li a:hover {
 }
 
 h1 {
-  font-family: "DM Sans", sans-serif;
-  font-weight: 700;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 600;
   text-transform: uppercase;
   font-size: 2rem;
   margin: 0;
@@ -38,10 +39,19 @@ h2 {
 
 h2 a {
   text-decoration: none;
-  font-family: "DM Sans", sans-serif;
-  font-weight: 400;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 300;
   font-size: 1rem;
   color: gray;
+}
+
+h3 {
+  margin: 0;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
 }
 
 img {
@@ -49,6 +59,11 @@ img {
 }
 
 /* CATEGORIES ARTICLE */
+
+.category {
+  padding-bottom: 5rem;
+}
+
 article {
   border: 1px solid black;
   margin-top: 1rem;
@@ -59,6 +74,11 @@ article {
 }
 
 .specItem {
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.detailItem {
+  padding-top: 0.5rem;
+  padding-bottom: 00.5rem;
 }
