--- a/base.css
+++ b/base.css
@@ -2,8 +2,18 @@
 
 main {
   margin: 0%;
+  background-color: rgb(236, 236, 236);
+  padding: 1rem;
+}
+
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  width: 8rem;
   padding-top: 2rem;
-  background-color: burlywood;
+  padding-bottom: 2rem;
 }
 
 li a:link {
@@ -15,26 +25,42 @@ li a:link {
   letter-spacing: 0.1rem;
 }
 
-li a:visited {
+p {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
   color: black;
 }
 
-li a:hover {
-  border-bottom: 1px solid currentColor;
-  display: inline-block;
-  line-height: 0.85;
+a:hover {
+  font-style: italic;
 }
 
 h1 {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 600;
   text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  letter-spacing: 0.1rem;
   margin: 0;
+}
+
+h1 a {
+  text-decoration: none;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 600;
+  font-size: 1.5rem;
+  color: black;
 }
 
 h2 {
   margin: 0;
+  padding-bottom: 2rem;
 }
 
 h2 a {
@@ -42,7 +68,7 @@ h2 a {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 300;
   font-size: 1rem;
-  color: gray;
+  color: black;
 }
 
 h3 {
@@ -60,13 +86,19 @@ img {
 
 /* CATEGORIES ARTICLE */
 
-.category {
-  padding-bottom: 5rem;
+article {
+  margin-bottom: 2rem;
 }
 
-article {
-  border: 1px solid black;
-  margin-top: 1rem;
+.category {
+  margin: 0;
+  padding-bottom: 5rem;
+  padding-top: 5rem;
+  border-bottom: 1px solid black;
+}
+
+.carousel {
+  margin: 0;
 }
 
 .catTitle {
@@ -81,4 +113,18 @@ article {
 .detailItem {
   padding-top: 0.5rem;
   padding-bottom: 00.5rem;
+}
+
+.viewMore {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+/* FOOTER */
+
+footer {
+  text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  background-color: rgb(236, 236, 236);
 }
