--- a/style.css
+++ b/style.css
@@ -3,7 +3,23 @@
 }
 
 .primaryLink {
-  background-color: burlywood;
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-top: 1px solid black;
+}
+
+.primaryLink li {
+  margin-right: 2rem;
+  margin-left: 2rem;
+}
+
+.secLink {
   list-style: none;
   padding: 0px;
   margin: 0px;
@@ -16,13 +32,9 @@
   border-bottom: 1px solid black;
 }
 
-.primaryLink li {
+.secLink li {
   margin-right: 2rem;
-}
-
-.logo {
-  background-color: aqua;
-  text-align: center;
+  margin-left: 2rem;
 }
 
 .saleItem {
@@ -43,16 +55,22 @@
 @media screen and (min-width: 700px) {
   .category {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   }
 
   .catTitle {
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
   }
 
   .carousel {
-    grid-column: 3 / 8;
+    grid-column: 3 / 9;
     display: flex;
     flex-direction: row;
+    column-gap: 1rem;
+  }
+
+  .viewMore {
+    grid-column: 9/10;
+    align-self: center;
   }
 }
