--- a/base.css
+++ b/base.css
@@ -61,6 +61,9 @@ h1 a {
 h2 {
   margin: 0;
   padding-bottom: 2rem;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
 }
 
 h2 a {
