--- a/singleProduct.css
+++ b/singleProduct.css
@@ -1,3 +1,7 @@
+main {
+  border-bottom: 1px solid black;
+}
+
 .mainNav {
   display: grid;
 }
@@ -58,20 +62,42 @@
   text-align: right;
 }
 
-. @media screen and (min-width: 700px) {
+form {
+  padding-top: 1rem;
+}
+
+button {
+  margin-top: 4rem;
+  background-color: black;
+  color: white;
+  border-radius: 0;
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+@media screen and (min-width: 700px) {
   section {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
     margin-left: 3rem;
     margin-right: 3rem;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+
+  .pagTitle {
+    grid-column: 1 / 2;
+    padding-bottom: 2rem;
   }
 
   .productImg {
-    opacity: 0.3;
-    grid-column: 1 / 2;
+    grid-column: 3 / 6;
   }
 
   .infoItem {
-    grid-column: 3 / 5;
+    grid-column: 7 / 9;
   }
 }
