--- a/base.css
+++ b/base.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,300;0,500;1,300;1,500&display=swap");
 
 main {
   margin: 0%;
@@ -6,6 +7,7 @@ main {
   padding: 1rem;
 }
 
+/*
 .logo {
   display: block;
   margin-left: auto;
@@ -16,20 +18,22 @@ main {
   padding-bottom: 2rem;
 }
 
+*/
+
 li a:link {
   color: black;
   text-decoration: none;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Karla", sans-serif;
   font-weight: 300;
   font-size: 0.9rem;
-  letter-spacing: 0.1rem;
 }
 
 p {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Karla", sans-serif;
   font-weight: 300;
   font-size: 1rem;
   margin: 0;
+  padding-top: 0.5rem;
 }
 
 a {
@@ -42,18 +46,18 @@ a:hover {
 }
 
 h1 {
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 600;
+  font-family: "Karla", sans-serif;
+  font-weight: 500;
   text-transform: uppercase;
   font-size: 1.5rem;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.05rem;
   margin: 0;
 }
 
 h1 a {
   text-decoration: none;
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 600;
+  font-family: "Karla", sans-serif;
+  font-weight: 500;
   font-size: 1.5rem;
   color: black;
 }
@@ -61,14 +65,14 @@ h1 a {
 h2 {
   margin: 0;
   padding-bottom: 2rem;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Karla", sans-serif;
   font-weight: 300;
   font-size: 1rem;
 }
 
 h2 a {
   text-decoration: none;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Karla", sans-serif;
   font-weight: 300;
   font-size: 1rem;
   color: black;
@@ -76,11 +80,20 @@ h2 a {
 
 h3 {
   margin: 0;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Karla", sans-serif;
   font-weight: 300;
   font-size: 1rem;
   text-transform: uppercase;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.05rem;
+}
+
+h6 {
+  margin: 0;
+  font-family: "Karla", sans-serif;
+  font-weight: 300;
+  font-size: 3rem;
+  text-transform: uppercase;
+  letter-spacing: 0.05rem;
 }
 
 img {
