--- a/singleProduct.css
+++ b/singleProduct.css
@@ -8,11 +8,10 @@ main {
 
 .primaryLink {
   list-style: none;
-  padding: 0px;
   margin: 0px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: start;
   padding-top: 1rem;
   padding-bottom: 1rem;
   border-top: 1px solid black;
@@ -20,7 +19,6 @@ main {
 
 .primaryLink li {
   margin-right: 2rem;
-  margin-left: 2rem;
 }
 
 .secLink {
