--- a/base.css
+++ b/base.css
@@ -5,20 +5,62 @@ main {
   margin: 0%;
   background-color: rgb(236, 236, 236);
   padding: 1rem;
+  border-bottom: 1px solid black;
+}
+/* NAVIGATION */
+.mainNav {
+  display: grid;
 }
 
-/*
-.logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 100%;
-  width: 8rem;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.primaryLink {
+  list-style: none;
+  margin: 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-top: 1px solid black;
 }
 
-*/
+.primaryLink li {
+  padding-right: 2rem;
+  margin: 0;
+}
+
+.secLink {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+.secLink li {
+  margin-right: 2rem;
+  margin-left: 2rem;
+}
+
+@media screen and (min-width: 700px) {
+  .mainNav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0;
+  }
+
+  .primaryLink {
+    align-items: center;
+    border: none;
+  }
+}
+
+/* END NAVIGATION */
 
 li a:link {
   color: black;
